# ce-playground

./: .gitignore  README.md  pixi.toml  pyproject.toml
.github/workflows/: update-license-year.yml  update-lockfiles.yml
_ce_playground/: __init__.py  __main__.py  _c.py  _common.py  _cpp.py  _numba.py  _unpack.py
scripts/: _numba_s.py  inspect.sh
templates/: c.local.properties.jinja  numba.local.properties.jinja
